Adicionar Google Search Console verification tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="7fCokSJYf_Sa0y8AT9aPw5ZYwSbye5Fz4PckJMAQYd4" />
   <meta name="description" content="LRG Moda Íntima - Lingerie de alta qualidade com design moderno, conforto e beleza. Confira nossos produtos na Shopee!">
   <meta name="keywords" content="lingerie, moda íntima, calcinha, sutiã, conjunto íntimo, microfibra, conforto">
   <meta name="author" content="LRG Moda Íntima">
