--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
     <p>© 2025 LRG Moda Íntima - Todos os direitos reservados.</p>
   </footer>
 
+  <!-- WhatsApp fixo -->
+  <a href="https://wa.me/5522999175670" class="whatsapp-btn" target="_blank" rel="noopener noreferrer" aria-label="Conversar pelo WhatsApp">
+    Fale conosco
+  </a>
+
   <script src="script.js"></script>
 </body>
-</html>
 </html>
